--- a/style.css
+++ b/style.css
@@ -1,57 +1,71 @@
-* {border: 1px solid red;}
+/* * {border: 1px solid red;} */
 
 body {
   display: flex;
   flex-direction: column;
-  gap: 16px;
-  margin: 0px 15%;
+  /* gap: 16px; */
+  /* margin: 0px 15%; */
+  margin: 0;
   height: 100vh;
 }
 
-.header {
+.pageHeader {
   display: flex;
   flex-direction: row;
+  background-color: darkblue;
+  padding: 8px 15%;
 }
 
-.header .logo {
+.pageHeader .logo {
   flex: 1;
+  color: white;
 }
 
-.header .link {
+.pageHeader .link {
   display: flex;
   flex-direction: row;
   gap: 16px;
+  color: white;
+}
+
+.pageHeader .link a {
+  color: white;
+  text-decoration: none;
 }
 
 .main {
   display: flex;
   flex-direction: column;
   flex: 1 0 auto;
-  gap: 16px;
+  /* gap: 16px; */
 }
 
 .body1 {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  flex: 1 1 auto;
+  /* flex: 1 1 auto; */
   gap: 8px;
+  background-color: lightblue;
+  padding: 64px 15%;
 }
 
 .body1 .left {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 8px;
+  gap: 16px;
 }
 
 .body1 .left .header {
   font-size: 24px;
   font-weight: bold;
+  color: white;
 }
 
 .body1 .left .subtext {
-  font-size: 16px;
+  font-size: 14px;
+  color: white;
 }
 
 .body1 .left button {
@@ -61,6 +75,8 @@ body {
 .body1 .imgFrame {
   width: 400px;
   height: 150px;
+  border: 1px solid black;
+  background-color: lightgrey;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -69,19 +85,23 @@ body {
 .body2 {
   display: flex;
   flex-direction: column;
-  flex: 1 1 auto;
+  /* flex: 1 1 auto; */
+  padding: 64px 20%;
+  background-color: lightgreen;
 }
 
 .body2 .header {
   font-size: 20px;
   font-weight: bold;
-  justify-content: center;
+  text-align: center;
+  margin: 0 0 32px 0;
 }
 
 .body2 .content {
   display: flex;
   flex-direction: row;
-  gap: 16px;
+  justify-content: center;
+  gap: 32px;
 }
 
 .body2 .individualContent{
@@ -89,33 +109,88 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 8px;
 }
 
 .body2 .imgBox {
   width: 100px;
   height: 100px;
+  border: 1px solid black;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .body2 .imgDesc {
-  justify-content: center;
+  width: 100px;
+  height: auto;
   text-align: center;
 }
 
 .body3 {
   display: flex;
   flex-direction: column;
-  flex: 1 1 auto;
+  /* flex: 1 1 auto; */
+  padding: 64px 20%;
+  gap: 8px;
+  background-color: lightpink;
+}
+
+.body3 .quote {
+  font-size: 20px;
+  font-style: italic;
+}
+
+.body3 .quoteAuthor {
+  font-weight: bold;
+  font-size: 14px;
+  text-align: end;
 }
 
 .body4 {
   display: flex;
   flex-direction: column;
-  flex: 1 1 auto; 
+  padding: 64px 15%;
+  /* flex: 1 1 auto;  */
+  background-color: lightsalmon;
 }
 
+.body4 .box {
+  display: flex;
+  flex-direction: row;
+  background-color: lightseagreen;
+  padding: 32px;
+  align-items: center;
+  justify-content: space-around;
+  /* gap: 32px; */
+}
+
+.body4 .txt .header {
+  color: white;
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.body4 .txt .subtext {
+  color: white;
+  font-size: 14px;
+}
+
+.footer {
+  text-align: center;
+  font-size: 12px;
+  color: white;
+  background-color: darkblue;
+  padding: 16px;
+}
+
+button {
+  width: 100px;
+  height: 25px;
+  border-radius: 5px;
+  background-color: blue;
+  color: white;
+}
 
 ul {
   list-style-type: none;
