--- a/style.css
+++ b/style.css
@@ -12,24 +12,26 @@ body {
 .pageHeader {
   display: flex;
   flex-direction: row;
-  background-color: darkblue;
   padding: 8px 15%;
+  background-color: #1f2937;
+  color: #f9faf8;
 }
 
 .pageHeader .logo {
   flex: 1;
-  color: white;
+  color: #f9faf8;
+  font-weight: bold;
 }
 
 .pageHeader .link {
   display: flex;
   flex-direction: row;
   gap: 16px;
-  color: white;
+  color: #e5e7eb;
 }
 
 .pageHeader .link a {
-  color: white;
+  color: #e5e7eb;
   text-decoration: none;
 }
 
@@ -46,7 +48,7 @@ body {
   justify-content: center;
   /* flex: 1 1 auto; */
   gap: 8px;
-  background-color: lightblue;
+  background-color: #1f2937;
   padding: 64px 15%;
 }
 
@@ -60,16 +62,12 @@ body {
 .body1 .left .header {
   font-size: 24px;
   font-weight: bold;
-  color: white;
+  color: #f9faf8;
 }
 
 .body1 .left .subtext {
   font-size: 14px;
-  color: white;
-}
-
-.body1 .left button {
-  padding: 4px 24px;
+  color: #e5e7eb;
 }
 
 .body1 .imgFrame {
@@ -87,7 +85,7 @@ body {
   flex-direction: column;
   /* flex: 1 1 auto; */
   padding: 64px 20%;
-  background-color: lightgreen;
+  background-color: white;
 }
 
 .body2 .header {
@@ -95,6 +93,7 @@ body {
   font-weight: bold;
   text-align: center;
   margin: 0 0 32px 0;
+  color: #1f2937;
 }
 
 .body2 .content {
@@ -115,7 +114,8 @@ body {
 .body2 .imgBox {
   width: 100px;
   height: 100px;
-  border: 1px solid black;
+  border: 2px solid #3882F6;
+  border-radius: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -125,6 +125,7 @@ body {
   width: 100px;
   height: auto;
   text-align: center;
+  font-size: 14px;
 }
 
 .body3 {
@@ -133,7 +134,7 @@ body {
   /* flex: 1 1 auto; */
   padding: 64px 20%;
   gap: 8px;
-  background-color: lightpink;
+  background-color: #e5e7eb;
 }
 
 .body3 .quote {
@@ -152,13 +153,13 @@ body {
   flex-direction: column;
   padding: 64px 15%;
   /* flex: 1 1 auto;  */
-  background-color: lightsalmon;
+  background-color: white;
 }
 
 .body4 .box {
   display: flex;
   flex-direction: row;
-  background-color: lightseagreen;
+  background-color: #3882F6;
   padding: 32px;
   align-items: center;
   justify-content: space-around;
@@ -166,13 +167,13 @@ body {
 }
 
 .body4 .txt .header {
-  color: white;
+  color: #f9faf8;
   font-weight: bold;
   font-size: 16px;
 }
 
 .body4 .txt .subtext {
-  color: white;
+  color: #e5e7eb;
   font-size: 14px;
 }
 
@@ -180,7 +181,7 @@ body {
   text-align: center;
   font-size: 12px;
   color: white;
-  background-color: darkblue;
+  background-color: #1f2937;
   padding: 16px;
 }
 
@@ -188,7 +189,8 @@ button {
   width: 100px;
   height: 25px;
   border-radius: 5px;
-  background-color: blue;
+  padding: 4px 24px;
+  background-color: #085CEC;
   color: white;
 }
 
